--- a/index4.html
+++ b/index4.html
@@ -4,14 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style4.css">
 </head>
 <body>
 <div id="container">
   <div header>
-    <div nav>
-      
-    </div>
+
   </div>
   <div main>
 
