--- a/index3.html
+++ b/index3.html
@@ -9,12 +9,14 @@
 <body>
 <div id="container">
   <div header>
+    <div nav>
 
+    </div>
   </div>
   <div main>
 
   </div>
-  <div asside>
+  <div aside>
 
   </div>
   <div footer>
