--- a/index4.html
+++ b/index4.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 <div id="container">
-  <div header>
-    <div nav>
+  <div class=header>
+    <div class=nav>
         
     </div>
   </div>
-  <div main>
+  <div class=main>
 
   </div>
-  <div aside>
+  <div class=aside>
 
   </div>
-  <div footer>
+  <div class=footer>
 
   </div>
 </div>
