Har jobbat med bilderna

--- a/index4.html
+++ b/index4.html
@@ -8,20 +8,25 @@
 </head>
 <body>
 <div id="container">
-  <div class=header>
-    <div class=nav>
-        
-    </div>
-  </div>
-  <div class=main>
+  <header>
+    <nav> 
 
-  </div>
-  <div class=aside>
+    </nav>
 
-  </div>
-  <div class=footer>
+ </header>
+ <main> 
+  <img src="img/ica.jpg" alt="Ica blad">
+</main>
 
-  </div>
+ <aside> 
+  <img src="img/rea_blad_ica.jpg" alt="Ica blad">
+ </aside>
+
+
+ <footer> 
+
+ </footer>
+
 </div>
 </body>
 </html>
