--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
 </head>
 <body>
 <div id="container">
-  <div class=header>
-    <div class=nav>
+  <header>
+    <nav> 
+     <ul>
+<li><a href="index2.html"> coop </a></li>
+<li><a href="index3.html"> hemköp </a></li>
+<li><a href="index4.html"> ica </a></li>
+     </ul>
+    </nav>
 
-    </div>
-  </div>
-  <div class=main>
+ </header>
+ <main> 
+  <img src="img/handla_matbutik.jpg" class="matbutik">
+</main>
 
-  </div>
-  <div class=aside>
+ <aside> 
+  <img src="img/glad_handla.jpg" class="glad">
+ </aside>
 
-  </div>
-  <div class=footer>
 
-  </div>
+ <footer> 
+
+ </footer>
+
 </div>
 </body>
 </html>
