--- a/index.html
+++ b/index.html
@@ -16,14 +16,36 @@
 <li><a href="index4.html"> ica </a></li>
      </ul>
     </nav>
+     <div>
+      <h1>Matsmart</h1>
+     </div>
+    
 
  </header>
  <main> 
-  <img src="img/handla_matbutik.jpg" class="matbutik">
+   <div class="image_container">
+   <img src="img/handla_matbutik.jpg" class="matbutik">
+  <p> Vill du spara pengar på din matbudget utan att kompromissa med kvaliteten? Genom att handla smart och utnyttja extrapriser i matbutiker som Hemköp, Coop och ICA kan du få mer för pengarna och samtidigt minska matsvinnet.</p>
+<ul>
+  <li> Lägre matkostnader – Spara pengar genom att köpa varor till rabatterade priser.</li>
+  <li> Fynda dyrare produkter – Passa på att köpa premiumvaror som ekologiskt och färskvaror till bättre pris.</li>
+  <li> Minska matsvinnet – Många butiker sänker priserna på varor med kort datum – perfekt att äta direkt eller frysa in.</li>
+   <li>Planera och handla smart – Bygg upp ett lager av basvaror när de är billiga och undvik att betala fullpris senare.</li>
+  </ul>
+</div>
 </main>
 
- <aside> 
+ <aside>
+  <div class="image_container">
+  <h1>Så hittar du de bästa erbjudandena</h1>
   <img src="img/glad_handla.jpg" class="glad">
+  <ul>
+   <li>Kolla veckans reklamblad – Håll koll på butikernas erbjudanden och planera dina inköp.</li>
+   <li>Använd butikernas appar – ICA, Coop och Hemköp har appar där du kan se personliga rabatter.</li>
+   <li>Jämför priser – Ibland finns samma vara till extrapris i flera butiker – välj den bästa dealen!</li>
+  </ul>
+    <p>Handla smart, spara pengar och få mer för varje krona – börja utnyttja extrapriser redan idag!</p>
+</div>
  </aside>
 
 
