--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,11 @@
 <div id="container">
  <header>
     <nav> 
-
+      <ul>
+        <li><a href="index2.html"> coop </a></li>
+        <li><a href="index4.html"> ica </a></li>
+        <li><a href="index.html"> startsida </a></li>
+      </ul>
     </nav>
 
  </header>
@@ -22,6 +26,7 @@
   <img src="img/rea_blad_hemköp.jpg" alt="Ica blad">
  </aside>
 
+ <article></article>
 
  <footer> 
 
