--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,11 @@
 <div id="container">
   <header>
     <nav> 
-
+      <ul>
+        <li><a href="index3.html"> hemköp </a></li>
+        <li><a href="index4.html"> ica </a></li>
+        <li><a href="index.html"> startsida </a></li>
+     </ul>
     </nav>
 
  </header>
@@ -21,7 +25,6 @@
  <aside> 
 
  </aside>
-
 
  <footer> 
 
