--- a/index4.html
+++ b/index4.html
@@ -10,7 +10,11 @@
 <div id="container">
   <header>
     <nav> 
-
+      <ul>
+        <li><a href="index2.html"> coop </a></li>
+        <li><a href="index3.html"> hemköp </a></li>
+        <li><a href="index.html"> startsida </a></li>
+      </ul>
     </nav>
 
  </header>
