--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 <body>
 <div id="container">
   <header>
-    <nav> 
+    <nav class="navbar">
      <ul>
 <li><a href="index2.html"> coop </a></li>
 <li><a href="index3.html"> hemköp </a></li>
 <li><a href="index4.html"> ica </a></li>
      </ul>
+   
     </nav>
-     <div>
-      <h1>Matsmart</h1>
-     </div>
+
+      <h1>Matsmartartkollen</h1>
+      <h2></h2>
+      <h3>för dig som vill spara enkelt</h3>
+      
+
     
 
  </header>
